 - Fix `digit_to_number` not being found on some comilers.  (#518, #519)
 - In audit mode, define `_FORTIFY_SOURCE` to enable some extra checks.
 - Make more functions `constexpr`.  Nothing particularly useful though.
 - Make more functions `noexcept`.
 - Move constructor & assignment for `result`.
 - Support LGTM.com and Facebook "infer" static analysis.
7.7.0
 - Fix `stream_to` for differing table/client encodings.  (#473)
 - Use `[[likely]]` & `[[unlikely]]` only in C++20, to silence warnings.
 - Fix clang "not a const expression" error in Windows.  (#472)
 - Fix warnings about `[[likely]]` in `if constexpr`.  (#475)
 - Clearer error for ambiguous string conversion of `char` type.  (#481)
 - Pseudo-statement in `prepare()` error was for the wrong statement.  (#488)
 - New class, `connecting` for nonblocking connection to the database.  (#487)
 - New class, `range` for SQL range types.  (#490)
 - Replace `std::isdigit` with a safer alternative.
 - Support string conversions for `std::chrono::year_month_day`. (#492)
 - Helper for implementing string traits: `generic_to_buf`.
 - Support `result::at(row_num, col_num)`.
 - Support `result[row_num, col_num]` if the compiler allows it.
 - Work around broken `std::filesystem::path` in MinGW.  (#498)
 - Fix leak when getting client encoding fails.  (#500)
 - Use `std::cmp_greater` etc. when available.  Saves some ugly casts.
 - Move `result_iterator.hxx` into `pqxx/include/internal/`.
 - Move `compiler-public.hxx` into `pqxx/include/internal/`.
 - Add script for updating copyright strings.
 - Make `tools/lint` figure out source directory by itself.
 - Pass the actual C++ version to `tools/lint`, not the baseline one.
 - Re-enable pyflakes testing in `tools/lint`.
 - Make more functions `[[nodiscard]]`.
 - Qualified some member functions as lvalue or rvalue.
 - Don't run clang-tidy by default.  Compatibility issues with gcc options.
 - Describe version requirements in a JSON file, `requirements.json`.